--- a/CatKeeper/app/src/main/res/values/strings.xml
+++ b/CatKeeper/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="btn_txt_cats_nearby">Cats Nearby</string>
 </resources>
