--- a/CatKeeper/app/src/main/res/values/strings.xml
+++ b/CatKeeper/app/src/main/res/values/strings.xml
@@ -1,7 +1,10 @@
 <resources>
     <string name="app_name">CatKeeper</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="text_logo_title">Cat On Cloud</string>
+    <string name="input_hint_username">Username</string>
+    <string name="input_hint_password">Password</string>
+    <string name="text_btn_login">Login</string>
     <string name="btn_txt_cats_nearby">Cats Nearby</string>
 </resources>
