--- a/CatKeeper/app/src/main/res/values/strings.xml
+++ b/CatKeeper/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="input_hint_password">Password</string>
     <string name="text_btn_login">Login</string>
     <string name="btn_txt_cats_nearby">Cats Nearby</string>
+    <string name="btn_txt_my_cat">My Cat</string>
 </resources>
