--- a/CatKeeper/app/src/main/res/values/strings.xml
+++ b/CatKeeper/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="text_btn_login">Login</string>
     <string name="btn_txt_cats_nearby">Cats Nearby</string>
     <string name="btn_txt_my_cat">My Cat</string>
+    <string name="text_no_cat_reminder">Sorry, you have no cat.\n\nWant to adopt one from the cloud? Find it from cat nearby</string>
 </resources>
